--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,51 +1,107 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
     <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
     {% include meta.html %}
 
+    <!-- Bootstrap core CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<!--    optional theme -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+      <!-- Custom styles for this template -->
+    <link href="sticky-footer-navbar.css" rel="stylesheet">
+
+    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-
-    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
   <body>
-    <div class="wrapper-masthead">
+
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
-
-          <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
-        </header>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">{{ site.name }} - {% if page.title %}{{ page.title }}{% endif %}</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#details">Breakfast Details</a></li>
+            <li ><a href="http://pslswim.club/volunteer/">Volunteer</a></li>
+            <li ><a href="auction">Silent Auction</a></li>
+            <li ><a href="/sponsor">Sponsor</a></li>
+            <li ><a href="/contact">Contact</a></li>
+            <li>
+                            <a class="" href="https://www.eventbrite.com/invite-friends?eid=16230907080" title="Invite friends via email" data-tracking-action="Share" data-tracking-label="email">
+                                <span>
+                                    Tell a Friend!
+                                </span>
+                            </a>
+                    </li>
+                    <li>
+                        <a class="" href="http://www.linkedin.com/shareArticle?url=http%3A%2F%2Fwww.eventbrite.com%2Fe%2Fsea-lions-pancake-breakfast-tickets-16230907080%3Faff%3Desli&amp;mini=true&amp;source=Eventbrite&amp;title=Sea+Lions+Pancake+Breakfast&utm_medium=eventpage&utm_term=share" title="Share this page on LinkedIn" target="_blank" data-tracking-action="Share" data-tracking-label="linkedin">
+                            <span>
+                                Share
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="" href="http://twitter.com/share?url=http%3A%2F%2Fwww.eventbrite.com%2Fe%2Fsea-lions-pancake-breakfast-tickets-16230907080%3Faff%3Destw&amp;text=Check+out+%22Sea+Lions+Pancake+Breakfast%22&amp;via=eventbrite&amp;count=none&utm_medium=eventpage&utm_term=tweet" title="Share this page on Twitter" target="_blank" data-tracking-action="Share" data-tracking-label="twitter">
+                            <span>
+                                Tweet
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <fb:like class="fb_long_widget" href="http://www.eventbrite.com/e/16230907080&utm_medium=eventpage&utm_term=like" show_faces="false" width="315"></fb:like>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
-    </div>
+    </nav>
 
-    <div id="main" role="main" class="container">
+    <!-- Begin page content -->
       {{ content }}
     </div>
 
-    <div class="wrapper-footer">
-      <div class="container">
-        <footer class="footer">
-          {% include svg-icons.html %}
-        </footer>
-      </div>
-    </div>
+    <footer class="footer">
+      <div class="container-fluid">
 
-    {% include analytics.html %}
+<p> <a href="http://www.ihop.com" target="_blank">Pacifica Sea Lions Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.pacificasealions.com/TabGeneric.jsp?_tabid_=1075&team=psl">Where we train</a> &nbsp;&nbsp;|&nbsp;&nbsp;<a href="media-contacts.html" target="_self">Media Contacts</a>&nbsp;&nbsp;<br>
+ 401 Paloma Avenue Pacifica, CA 94044
+
+Tel: 650-738-7460 91203-4415  &copy;Pacifica Sea Lions Aquatic Club</p>
+      </div>
+    </footer>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="/javascripts/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
