--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,9 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        
   </head>
 
   <body>
@@ -48,35 +51,41 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#details">Breakfast Details</a></li>
-            <li ><a href="http://pslswim.club/volunteer/">Volunteer</a></li>
+            <li ><a target="_blank" href="http://pslswim.club/volunteer/">Volunteer</a></li>
             <li ><a href="auction">Silent Auction</a></li>
             <li ><a href="/sponsor">Sponsor</a></li>
-            <li ><a href="/contact">Contact</a></li>
-            <li>
-                            <a class="" href="https://www.eventbrite.com/invite-friends?eid=16230907080" title="Invite friends via email" data-tracking-action="Share" data-tracking-label="email">
-                                <span>
-                                    Tell a Friend!
-                                </span>
-                            </a>
-                    </li>
-                    <li>
-                        <a class="" href="http://www.linkedin.com/shareArticle?url=http%3A%2F%2Fwww.eventbrite.com%2Fe%2Fsea-lions-pancake-breakfast-tickets-16230907080%3Faff%3Desli&amp;mini=true&amp;source=Eventbrite&amp;title=Sea+Lions+Pancake+Breakfast&utm_medium=eventpage&utm_term=share" title="Share this page on LinkedIn" target="_blank" data-tracking-action="Share" data-tracking-label="linkedin">
-                            <span>
-                                Share
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="http://twitter.com/share?url=http%3A%2F%2Fwww.eventbrite.com%2Fe%2Fsea-lions-pancake-breakfast-tickets-16230907080%3Faff%3Destw&amp;text=Check+out+%22Sea+Lions+Pancake+Breakfast%22&amp;via=eventbrite&amp;count=none&utm_medium=eventpage&utm_term=tweet" title="Share this page on Twitter" target="_blank" data-tracking-action="Share" data-tracking-label="twitter">
-                            <span>
-                                Tweet
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <fb:like class="fb_long_widget" href="http://www.eventbrite.com/e/16230907080&utm_medium=eventpage&utm_term=like" show_faces="false" width="315"></fb:like>
-            </li>
           </ul>
+          <ul class="nav navbar-nav navbar-right nav-pills">
+              <li>
+                  <a class="js-event-track social_share email_button large" 
+                  href="https://www.eventbrite.com/invite-friends?eid=16230907080" 
+                  title="Invite friends via email" 
+                  data-tracking-action="Share"
+                  target="_blank" 
+                  >
+                      <i class="fa fa-envelope-o"></i><br />
+                   </a>
+              </li>
+              <li>
+              <a class="btn btn-social-icon btn-twitter"
+href="http://twitter.com/share?url=http%3A%2F%2Fwww.eventbrite.com%2Fe%2Fsea-lions-pancake-breakfast-tickets-16230907080%3Faff%3Destw&amp;text=Check+out+%22Sea+Lions+Pancake+Breakfast%22&amp;via=eventbrite&amp;count=none&utm_medium=eventpage&utm_term=tweet" title="Share this page on Twitter" 
+                  target="_blank" data-tracking-action="Share" 
+                  data-tracking-label="twitter">
+                  <i class="fa fa-twitter"></i>
+              </a>
+              </li>
+              <li>
+                  <a class="btn btn-social-icon btn-linkedin"
+                      href="http://www.linkedin.com/shareArticle?url=http%3A%2F%2Fwww.eventbrite.com%2Fe%2Fsea-lions-pancake-breakfast-tickets-16230907080%3Faff%3Desli&amp;mini=true&amp;source=Eventbrite&amp;title=Sea+Lions+Pancake+Breakfast&utm_medium=eventpage&utm_term=share" 
+                      title="Share this page on LinkedIn" 
+                      target="_blank" 
+                      data-tracking-action="Share" 
+                      data-tracking-label="linkedin"
+                  >
+                      <i class="fa fa-linkedin"></i>
+                  </a>
+              </li>
+                    </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
